# lilac

./: .gitignore  Pipfile  README.md  alembic.ini  go.mod  go.sum  justfile  lilac.toml  lilac.toml.example  main.go  post.tmpl  pyproject.toml  readme  requirements.txt  test.http
alembic/: env.py
alembic/versions/: 0f4e73092a91_add_posts_table_triggers.py  2b707be1442b_create_posts_and_deleted_posts_table.py
app/: __init__.py  database.py  errors.py  micropub.py  models.py  render.py  util.py  validators.py
data/: example_config.py
endpoints/: media.go  micropub.go
kv/: kv.go  kv_test.go
microformats/: jf2.go  jf2_test.go  mf2.go  mf2_test.go
middleware/: auth.go  body.go
post/: normalize.go  post.go  post_test.go  properties.go
store/: git.go  persistence.go
template/: template.go
tests/: conftest.py  test_micropub_crud.py  test_micropub_media.py  test_micropub_query.py
version/: version.go
